--- a/FakeLightmap/FakeLightmap.ini
+++ b/FakeLightmap/FakeLightmap.ini
@@ -1,7 +1,7 @@
-namespace = LightMap
-;**** FAKE LIGHTMAP SHADER ****
+namespace = VirTex
+;**** VIRTUAL TEXTURE SHADER V0.1 ****
 ;Contributors: SinsOfSeven
-[ResourceFake]
+[ResourceLightMap]
 [ResourceBase]
 filename = BaseMap.dds
 [Constants]
@@ -11,7 +11,7 @@ global persist $g = 0.5
 global persist $b = 0
 global persist $a = 0
 global $c = -1
-post ResourceFake = copy_desc ResourceBase
+post ResourceLightMap = copy_desc ResourceBase
 post run = CustomShaderLightMap
 
 [KeyMenu]
@@ -38,9 +38,9 @@ z87 = $b
 w87 = $a
 ; Calculate Map
 cs = LightMap.hlsl
-cs-u5 = copy Resource\LightMap\Fake
+cs-u5 = copy ResourceLightMap
 dispatch = 1, 1, 1
-Resource\LightMap\Fake = copy cs-u5
+ResourceLightMap = copy cs-u5
 ; Clean Up
 x87 = $x87
 y87 = $y87
@@ -49,7 +49,14 @@ w87 = $w87
 cs-u5 = null
 
 ; <-------> UI SECTION <------->
-;0.1618033988
+[ResourceSliderR]
+filename = SliderR.png
+[ResourceSliderG]
+filename = SliderG.png
+[ResourceSliderB]
+filename = SliderB.png
+[ResourceSliderA]
+filename = SliderA.png
 [ResourceBackground]
 filename = BackGround.png
 [ResourceForeground]
@@ -69,12 +76,15 @@ local $x = z87
 local $xo = z87 + x87
 local $y = w87
 local $yo = w87 + y87
-if cursor_x > $x && cursor_x < $xo && cursor_y > $y && cursor_y < $yo
-    $c = 1-(cursor_y-$y)/y87
+if cursor_x > $x && cursor_x < $xo 
+    if cursor_y > $y && cursor_y < $yo
+        $c = 1-(cursor_y-$y)/y87
+    endif
 endif
 
 [CommandListSetRed]
 $c = $r
+ps-t100 = ResourceSliderR
 run = CommandListSetColor
 if $c >= 0
     $r = $c
@@ -82,6 +92,7 @@ endif
 
 [CommandListSetGreen]
 $c = $g
+ps-t100 = ResourceSliderG
 run = CommandListSetColor
 if $c >= 0
     $g = $c
@@ -89,6 +100,7 @@ endif
 
 [CommandListSetBlue]
 $c = $b
+ps-t100 = ResourceSliderB
 run = CommandListSetColor
 if $c >= 0
     $b = $c
@@ -96,6 +108,7 @@ endif
 
 [CommandListSetAlpha]
 $c = $a
+ps-t100 = ResourceSliderA
 run = CommandListSetColor
 if $c >= 0
     $a = $c
@@ -105,7 +118,6 @@ endif
 local $x87 = x87
 local $y87 = y87
 local $w87 = w87
-ps-t100 = ResourceForeground
 w87 = w87 + y87 * (1-$c) - 0.005
 x87 = 0.01618033988
 z87 = z87-x87*0.2
@@ -119,34 +131,37 @@ w87 = $w87
 [CommandListDraw]
 ; BOX
 ps-t100 = ResourceBackground
-x87 = 0.11
+x87 = 0.13
 y87 = 0.1618033988 * res_width/res_height
 z87 = 0.605
 w87 = 0.1
 run = CustomShaderElement
 ; BAR
-ps-t100 = ResourceForeground
 x87 = 0.01
 y87 = 0.1618033988 * res_width/res_height * 0.95
 w87 = 0.060450849 * res_width/res_height
 ; BAR.R
 z87 = 0.611
+ps-t100 = ResourceForeground
 run = CustomShaderElement
 run = CommandListSetRed
 run = CommandListCursors
 ; BAR.G
 z87 = 0.641
+ps-t100 = ResourceForeground
 run = CustomShaderElement
 run = CommandListSetGreen
 run = CommandListCursors
 ; BAR.B
 z87 = 0.669
+ps-t100 = ResourceForeground
 run = CustomShaderElement
 run = CommandListSetBlue
 run = CommandListCursors
 ; BAR.A
 x87 = 0.01
 z87 = 0.699
+ps-t100 = ResourceForeground
 run = CustomShaderElement
 run = CommandListSetAlpha
 run = CommandListCursors
