FakeLightmap 4 Layers, no UI changes

--- a/FakeLightmap/FakeLightmap.ini
+++ b/FakeLightmap/FakeLightmap.ini
@@ -1,28 +1,115 @@
 namespace = VirTex
-;**** VIRTUAL TEXTURE SHADER V0.1 ****
+;**** VIRTUAL TEXTURE SHADER V0.5 ****
 ;Contributors: SinsOfSeven
-[ResourceLightMap]
-[ResourceBase]
-filename = BaseMap.dds
 [Constants]
 global persist $m = 0
-global persist $r = 0
-global persist $g = 0.5
-global persist $b = 0
-global persist $a = 0
+global persist $l = 0
+;Storage
+global persist $color0
+global persist $color1
+global persist $color2
+global persist $color3
+;Instancing
+post run = CommandListUnpack
 global $c = -1
 post ResourceLightMap = copy_desc ResourceBase
+post ResourceMap.1 = copy_desc ResourceBase
+post ResourceMap.2 = copy_desc ResourceBase
+post ResourceMap.3 = copy_desc ResourceBase
+global $hold
+post $hold = $l
+post $l = 3
 post run = CustomShaderLightMap
+post $l = 2
+post run = CustomShaderLightMap
+post $l = 1
+post run = CustomShaderLightMap
+post $l = 0
+post run = CustomShaderLightMap
+post $l = $hold
+;Runtime Vars
+global $r = 0
+global $g = 0.5
+global $b = 0
+global $a = 0
+global $r1
+global $g1
+global $b1
+global $a1
+global $r2
+global $g2
+global $b2
+global $a2
+global $r3
+global $g3
+global $b3
+global $a3
 
 [KeyMenu]
 key = VK_F7 NO_CTRL NO_ALT NO_SHIFT
 type = cycle
 $m = 0,1
 
+[KeyLayer]
+key = k
+condition = $m
+type = cycle
+$l = 0,1,2,3
+
+[CommandListUnpack]
+local $enca = 64
+local $subenca = $enca - 1
+local $temp = 0
+$temp = $color0
+$r = $temp%$enca/$subenca
+$temp = $temp//$enca
+$g = $temp%$enca/$subenca
+$temp = $temp//$enca
+$b = $temp%$enca/$subenca
+$temp = $temp//$enca
+$a = $temp%$enca/$subenca
+$temp = $color1
+$r1 = $temp%$enca/$subenca
+$temp = $temp//$enca
+$g1 = $temp%$enca/$subenca
+$temp = $temp//$enca
+$b1 = $temp%$enca/$subenca
+$temp = $temp//$enca
+$a1 = $temp%$enca/$subenca
+$temp = $color2
+$r2 = $temp%$enca/$subenca
+$temp = $temp//$enca
+$g2 = $temp%$enca/$subenca
+$temp = $temp//$enca
+$b2 = $temp%$enca/$subenca
+$temp = $temp//$enca
+$a2 = $temp%$enca/$subenca
+$temp = $color3
+$r3 = $temp%$enca/$subenca
+$temp = $temp//$enca
+$g3 = $temp%$enca/$subenca
+$temp = $temp//$enca
+$b3 = $temp%$enca/$subenca
+$temp = $temp//$enca
+$a3 = $temp%$enca/$subenca
+
+
+[CommandListPack]
+local $enca = 64
+if $l == 0
+$color0 = ($r*0.9999*$enca//1) + ($g*0.9999*$enca//1*$enca) + ($b*0.9999*$enca//1*$enca**2) + ($a*0.9999*$enca//1*$enca**3)
+elif $l == 1
+$color1 = ($r1*0.9999*$enca//1) + ($g1*0.9999*$enca//1*$enca) + ($b1*0.9999*$enca//1*$enca**2) + ($a1*0.9999*$enca//1*$enca**3)
+elif $l == 2
+$color2 = ($r2*0.9999*$enca//1) + ($g2*0.9999*$enca//1*$enca) + ($b2*0.9999*$enca//1*$enca**2) + ($a2*0.9999*$enca//1*$enca**3)
+elif $l == 3
+$color3 = ($r3*0.9999*$enca//1) + ($g3*0.9999*$enca//1*$enca) + ($b3*0.9999*$enca//1*$enca**2) + ($a3*0.9999*$enca//1*$enca**3)
+endif
 [Present]
 if $m
     run = CommandListDraw
     run = CustomShaderLightMap
+    run = CommandListPack
 endif
 
 [CustomShaderLightMap]
@@ -32,15 +119,46 @@ local $y87 = y87
 local $z87 = z87
 local $w87 = w87
 ; Set Values
-x87 = $r
-y87 = $g
-z87 = $b
-w87 = $a
+if $l == 0
+    x87 = $r
+    y87 = $g
+    z87 = $b
+    w87 = $a
+elif $l == 1
+    x87 = $r1
+    y87 = $g1
+    z87 = $b1
+    w87 = $a1
+elif $l == 2
+    x87 = $r2
+    y87 = $g2
+    z87 = $b2
+    w87 = $a2
+elif $l == 3
+    x87 = $r3
+    y87 = $g3
+    z87 = $b3
+    w87 = $a3
+endif
 ; Calculate Map
 cs = LightMap.hlsl
-cs-u5 = copy ResourceLightMap
-dispatch = 1, 1, 1
-ResourceLightMap = copy cs-u5
+if $l == 0
+    cs-u5 = copy ResourceLightMap
+    dispatch = 1, 1, 1
+    ResourceLightMap = copy cs-u5
+elif $l == 1
+    cs-u5 = copy ResourceMap.1
+    dispatch = 1, 1, 1
+    ResourceMap.1 = copy cs-u5
+elif $l == 2
+    cs-u5 = copy ResourceMap.2
+    dispatch = 1, 1, 1
+    ResourceMap.2 = copy cs-u5
+elif $l == 3
+    cs-u5 = copy ResourceMap.3
+    dispatch = 1, 1, 1
+    ResourceMap.3 = copy cs-u5
+endif
 ; Clean Up
 x87 = $x87
 y87 = $y87
@@ -79,39 +197,109 @@ local $yo = w87 + y87
 if cursor_x > $x && cursor_x < $xo 
     if cursor_y > $y && cursor_y < $yo
         $c = 1-(cursor_y-$y)/y87
+        if $c < 0.02
+            $c = 0.0
+        endif
+        if $c > 0.98
+            $c = 1.0
+        endif
     endif
 endif
 
 [CommandListSetRed]
-$c = $r
-ps-t100 = ResourceSliderR
+if $l == 0
+    $c = $r
+elif $l == 1
+    $c = $r1
+elif $l == 2
+    $c = $r2
+elif $l == 3
+    $c = $r3
+endif
+ps-t100 = ResourceSliderr
 run = CommandListSetColor
 if $c >= 0
-    $r = $c
+    if $l == 0
+        $r = $c
+    elif $l == 1
+        $r1 = $c
+    elif $l == 2
+        $r2 = $c
+    elif $l == 3
+        $r3 = $c
+    endif
 endif
 
 [CommandListSetGreen]
-$c = $g
+if $l == 0
+    $c = $g
+elif $l == 1
+    $c = $g1
+elif $l == 2
+    $c = $g2
+elif $l == 3
+    $c = $g3
+endif
 ps-t100 = ResourceSliderG
 run = CommandListSetColor
 if $c >= 0
-    $g = $c
+    if $l == 0
+        $g = $c
+    elif $l == 1
+        $g1 = $c
+    elif $l == 2
+        $g2 = $c
+    elif $l == 3
+        $g3 = $c
+    endif
 endif
 
 [CommandListSetBlue]
-$c = $b
-ps-t100 = ResourceSliderB
+if $l == 0
+    $c = $b
+elif $l == 1
+    $c = $b1
+elif $l == 2
+    $c = $b2
+elif $l == 3
+    $c = $b3
+endif
+ps-t100 = ResourceSliderb
 run = CommandListSetColor
 if $c >= 0
-    $b = $c
+    if $l == 0
+        $b = $c
+    elif $l == 1
+        $b1 = $c
+    elif $l == 2
+        $b2 = $c
+    elif $l == 3
+        $b3 = $c
+    endif
 endif
 
 [CommandListSetAlpha]
-$c = $a
-ps-t100 = ResourceSliderA
+if $l == 0
+    $c = $a
+elif $l == 1
+    $c = $a1
+elif $l == 2
+    $c = $a2
+elif $l == 3
+    $c = $a3
+endif
+ps-t100 = ResourceSlidera
 run = CommandListSetColor
 if $c >= 0
-    $a = $c
+    if $l == 0
+        $a = $c
+    elif $l == 1
+        $a1 = $c
+    elif $l == 2
+        $a2 = $c
+    elif $l == 3
+        $a3 = $c
+    endif
 endif
 
 [CommandListCursors]
@@ -132,13 +320,13 @@ w87 = $w87
 ; BOX
 ps-t100 = ResourceBackground
 x87 = 0.13
-y87 = 0.1618033988 * res_width/res_height
+y87 = 0.3
 z87 = 0.605
 w87 = 0.1
 run = CustomShaderElement
 ; BAR
 x87 = 0.01
-y87 = 0.1618033988 * res_width/res_height * 0.95
+y87 = 0.3 * 0.95
 w87 = 0.060450849 * res_width/res_height
 ; BAR.R
 z87 = 0.611
@@ -165,3 +353,25 @@ ps-t100 = ResourceForeground
 run = CustomShaderElement
 run = CommandListSetAlpha
 run = CommandListCursors
+; PREVIEW
+x87 = 0.025
+y87 = 0.025 * res_width/res_height
+z87 = 0.70
+w87 = 0.4
+if $l == 0
+    ps-t100 = Resource\VirTex\LightMap
+elif $l == 1
+    ps-t100 = Resource\VirTex\Map.1
+elif $l == 2
+    ps-t100 = Resource\VirTex\Map.2
+elif $l == 3
+    ps-t100 = Resource\VirTex\Map.3
+endif
+run = CustomShaderElement
+
+[ResourceLightMap]
+[ResourceMap.1]
+[ResourceMap.2]
+[ResourceMap.3]
+[ResourceBase]
+filename = BaseMap.dds
