Updated Shaders defintions to be more explicit.

--- a/FakeLightmap/FakeLightmap.ini
+++ b/FakeLightmap/FakeLightmap.ini
@@ -113,6 +113,13 @@ $color3 = ($r3*0.9999*$enca//1) + ($g3*0.9999*$enca//1*$enca) + ($b3*0.9999*$enc
 endif
 
 [CustomShaderLightMap]
+vs = null
+hs = null
+ds = null
+gs = null
+ps = null
+cs = LightMap.hlsl
+run = BuiltInCommandListUnbindAllRenderTargets
 ; Store Vals
 local $x87 = x87
 local $y87 = y87
@@ -141,7 +148,6 @@ elif $l == 3
     w87 = $a3
 endif
 ; Calculate Map
-cs = LightMap.hlsl
 if $l == 0
     cs-u5 = copy ResourceLightMap
     dispatch = 1, 1, 1
@@ -176,7 +182,12 @@ filename = BaseMap.dds
 ; <-------> UI SECTION <------->
 [CustomShaderElement]
 vs = draw_2d.hlsl
+hs = null
+ds = null
+gs = null
 ps = draw_2d.hlsl
+cs = null
+run = BuiltInCommandListUnbindAllRenderTargets
 blend = ADD SRC_ALPHA INV_SRC_ALPHA
 cull = none
 topology = triangle_strip
