--- a/ResponsiveUI/Menu.ini
+++ b/ResponsiveUI/Menu.ini
@@ -1,6 +1,11 @@
 namespace = Menu
 
 [CustomShaderElement]
+hs = null
+ds = null
+gs = null
+cs = null
+run = BuiltInCommandListUnbindAllRenderTargets
 vs = draw_2d.hlsl
 ps = draw_2d.hlsl
 blend = ADD SRC_ALPHA INV_SRC_ALPHA
