--- a/ShapeKeys/Shape.ini
+++ b/ShapeKeys/Shape.ini
@@ -6,7 +6,13 @@ global $KeyBatch = 0
 
 [ResourceKey]
 [CustomShaderKeys]
+vs = null
+hs = null
+ds = null
+gs = null
+ps = null
 cs = ShapeKey.hlsl
+run = BuiltInCommandListUnbindAllRenderTargets
 cs-u5 = copy ResourceKey
 dispatch = $KeyBatch, 1, 1
 ResourceKey = ref cs-u5
