// Thank you Zlevir for all the heavy lifting.

--- a/ShapeKeys/Shape.ini
+++ b/ShapeKeys/Shape.ini
@@ -1,5 +1,6 @@
 namespace = Shape
 ;**** SHAPE KEY SHADER ****
+;// Thank you Zlevir for all the heavy lifting.
 ;Contributors: Cybertron, DiXiao, SinsOfSeven
 [Constants]
 global $KeyBatch = 0  
