--- a/FakeLightmap/FakeLightmap.ini
+++ b/FakeLightmap/FakeLightmap.ini
@@ -150,19 +150,19 @@ endif
 ; Calculate Map
 if $l == 0
     cs-u5 = copy ResourceLightMap
-    dispatch = 1, 1, 1
+    dispatch = 128//32, 128//32, 1
     ResourceLightMap = copy cs-u5
 elif $l == 1
     cs-u5 = copy ResourceMap.1
-    dispatch = 1, 1, 1
+    dispatch = 128//32, 128//32, 1
     ResourceMap.1 = copy cs-u5
 elif $l == 2
     cs-u5 = copy ResourceMap.2
-    dispatch = 1, 1, 1
+    dispatch = 128//32, 128//32, 1
     ResourceMap.2 = copy cs-u5
 elif $l == 3
     cs-u5 = copy ResourceMap.3
-    dispatch = 1, 1, 1
+    dispatch = 128//32, 128//32, 1
     ResourceMap.3 = copy cs-u5
 endif
 ; Clean Up
